--- a/_site.yml
+++ b/_site.yml
@@ -1,5 +1,5 @@
-name: "Ecolog-cuant"
-title: "Ecologia-cuantitativa"
+name: "gerardommc.github.io"
+title: "Gerardo Martín"
 description: |
   Ecologia-cuantitativa
 output_dir: "docs"
