Actualizacion cv y publicaciones

--- a/_site.yml
+++ b/_site.yml
@@ -1,5 +1,5 @@
 name: "gerardommc.github.io"
-title: "Ecología espacial y aplicada"
+title: "Mi laboratorio"
 description: |
   Ecologia-cuantitativa
 output_dir: "docs"
