--- a/_site.yml
+++ b/_site.yml
@@ -1,5 +1,5 @@
 name: "gerardommc.github.io"
-title: "Mi laboratorio"
+title: "Labo de Ecología Espacial y Aplicada"
 description: |
   Ecologia-cuantitativa
 output_dir: "docs"
