Nombre del labo

--- a/_site.yml
+++ b/_site.yml
@@ -1,5 +1,5 @@
 name: "gerardommc.github.io"
-title: "Labo de Ecología Espacial y Aplicada"
+title: "Laboratorio de Modelación y Ecología Aplicada"
 description: |
   Ecologia-cuantitativa
 output_dir: "docs"
